<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_marginBottom="15dp"
    tools:context=".Fragments.Compartidos.Productos"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/carddetalle"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:backgroundTint="#EAE8E8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/nom" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/tipos"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/bap"
                    android:id="@+id/bajo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/extra"
                android:orientation="horizontal">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="12sp"
                        android:text="@string/veg"
                        android:id="@+id/vegano"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="12sp"
                        android:text="@string/nolac"
                        android:id="@+id/lactosa"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="12sp"
                        android:text="@string/noglu"
                        android:id="@+id/gluten"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="12sp"
                        android:text="@string/nosu"
                        android:id="@+id/azucar"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/nopro" />
</LinearLayout>