<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".Fragments.Clientes.Inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="20dp"
        android:paddingTop="10dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        android:layout_margin="20dp"
        android:src="@drawable/escudo"
        app:tint="@color/white"
        android:layout_marginBottom="24dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/la_tienda_se_encuentra"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/abierta"
        android:id="@+id/esta"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/horario"
        android:gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/martes_a_domingo_de_9_00_a_14_00"
        android:gravity="center"
        android:textSize="15sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/map"
        android:layout_width="300dp"
        android:layout_marginTop="@dimen/marginm"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:elevation="@dimen/ms"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/radius">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/map"
            android:textColor="@color/white"
            android:textSize="@dimen/tm" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/llamar"
        android:layout_width="300dp"
        android:layout_marginTop="@dimen/marginm"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:elevation="@dimen/ms"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/radius">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/llam"
            android:textColor="@color/white"
            android:textSize="@dimen/tm" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/instagram"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@android:color/white"            android:layout_width="90dp"
            android:layout_height="70dp"
            android:src="@drawable/instagram"
            android:focusable="true" />
        <ImageView
            android:id="@+id/facebook"
            android:clickable="true"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:src="@drawable/facebook"
            android:focusable="true" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>