<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/campo1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/producto"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/campo2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/_03094275q"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/fecha"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:text="@string/_31_12_2020"
                android:gravity="right"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>