<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Actividades.Compartidas.DetalleProducto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_gravity="center"
        android:elevation="30dp"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher_round"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/nombre"
                android:text="@string/producto"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="5dp"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:text="@string/descripci_n"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/alergenos"
                    android:layout_width="wrap_content"
                    android:text="@string/al_rgenos"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/reservar"
        android:layout_width="300dp"
        android:layout_marginTop="25dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:onClick="reservar"
        android:clickable="true"
        android:elevation="@dimen/ms"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/radius">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/res"
            android:textColor="@color/white"
            android:textSize="@dimen/tm" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/volver"
        android:layout_width="300dp"
        android:layout_marginTop="25dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:onClick="volver"
        android:clickable="true"
        android:elevation="@dimen/ms"
        android:layout_marginBottom="@dimen/ms"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/radius">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/vol"
            android:textColor="@color/white"
            android:textSize="@dimen/tm" />
    </androidx.cardview.widget.CardView>

</LinearLayout>